src/test/deca/codegen/valid/instanceof_cast.deca

class A { }

class B extends A { 
    int x; 
}

{
    A a = new B();
    B b = (B)(a);

    //instanceof
    if(a instanceof B){
        println("ok");
        b.x = 1;
        println(b.x);
    }
    

}
