src/test/deca/codegen/invalid/null_write.deca

class A { 
    int x; 
    }

{
    A a;
    a = null;
    a.x = 1;
}
